# Phy-SIC

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  INSTALL.md  README.md  compose.yaml  copy_camerahmr_reusable_data.bat  docker-compose.yml  export_results.py  fetch_data.bat  fetch_data.ps1  fetch_data.sh  fetch_hf_data.bat  fetch_hf_data.py  fetch_hf_data_windows.ps1  human.py  image_helpers.py  install.sh  optimizer.py  pyproject.toml  requirements.txt  run_optimizer.py
cfg/: v1.yaml
models/deco/: hrnet.py
models/hsfm/: mmpose_inference.py
scripts/: check-env.py  fetch-data-win.bat  fetch-data-win.ps1
utils/: depth.py  geometry.py  vis.py
