[project]
name = "physic"
version = "0.1.0"
description = "PhySIC research code with a reproducible uv CUDA environment."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "albumentations==1.3.1",
  "chumpy==0.70",
  "diffusers[torch]==0.32.2",
  "dill==0.3.9",
  "einops==0.8.0",
  "embreex",
  "hydra-colorlog==1.2.0",
  "imageio",
  "importlib-resources>=5.12",
  "joblib==1.4.2",
  "json-tricks",
  "loguru==0.7.3",
  "matplotlib==3.8.4",
  "munkres",
  "ninja==1.11.1.3",
  "numpy==1.26.4",
  "omegaconf==2.3.0",
  "open3d==0.18.0",
  "opencv-python==4.10.0.84",
  "openmim",
  "pandas==2.1.1",
  "peft",
  "pillow",
  "pillow-heif",
  "protobuf==5.29.3",
  "pyrender==0.1.45",
  "pyrootutils==1.0.4",
  "python-dotenv",
  "pytorch-lightning==2.0.7",
  "pyyaml==6.0.2",
  "rich==14.0.0",
  "scikit-image==0.21.0",
  "scikit-learn",
  "scipy==1.10.1",
  "sentencepiece==0.2.0",
  "setuptools>=68,<76",
  "smplx==0.1.28",
  "tensorboard==2.14.0",
  "timm==1.0.12",
  "tqdm",
  "trimesh==4.4.9",
  "transformers",
  "wheel>=0.41,<1",
  "xformers==0.0.31.post1",
  "xtcocotools>=1.8",
  "yacs==0.1.8",
]

[project.optional-dependencies]
cpu = [
  "torch==2.7.1",
  "torchaudio==2.7.1",
  "torchvision==0.22.1",
]
cu128 = [
  "torch==2.7.1",
  "torchaudio==2.7.1",
  "torchvision==0.22.1",
]
dev = [
  "ruff>=0.5,<1",
]

[tool.uv]
package = false
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]

[tool.uv.extra-build-dependencies]
chumpy = ["pip"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
